[package]
name = "ptolemy-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ptolemy-core = { path = "../ptolemy-core" }
ptolemy-storage = { path = "../ptolemy-storage" }
axum.workspace = true
hex = "0.4"
jsonwebtoken = { workspace = true }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
