[package]
name = "ptolemy-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ptolemy-core = { path = "../ptolemy-core" }
ptolemy-storage = { path = "../ptolemy-storage" }
axum.workspace = true
axum-extra.workspace = true
base64 = "0.22"
futures = "0.3"
hex = "0.4"
hmac.workspace = true
jsonwebtoken = { workspace = true }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
openidconnect.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2"
uuid.workspace = true

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["full", "test-util"] }
sqlx = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
